Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = SIMP rubygem template for ore (https://github.com/ruby-ore/ore)
+	state = hidden
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
